[package]
name = "ghostfs"
version = "0.3.0"
edition = "2021"
description = "GhostFS — production-grade cybersecurity filesystem for HackerOS"

[lib]
name = "ghostfs"
path = "source-code/lib.rs"

[[bin]]
name = "ghostfs"
path = "source-code/main.rs"

[dependencies]
fuser        = "0.15"
sled         = "0.34"
bincode      = "1.3.3"
serde        = { version = "1.0", features = ["derive"] }
clap         = { version = "4.5", features = ["derive"] }
log          = "0.4"
env_logger   = "0.11"
libc         = "0.2"
aes-gcm      = "0.10"
blake3       = "1.5"
rand         = "0.8"
hex          = "0.4"
flate2       = "1.0"
rayon        = "1.10"
lru          = "0.12"
dashmap      = "5.5"
crossbeam    = "0.8"
thiserror    = "1.0"
anyhow       = "1.0"
zstd         = { version = "0.13", optional = true }
lz4          = { version = "1.24", optional = true }
# P0: KDF - Argon2id key derivation
argon2       = "0.5"
# P0: Secure memory zeroing
zeroize      = { version = "1.7", features = ["derive"] }
# Constant-time comparison (timing attack mitigation)
subtle       = "2.5"

[features]
default  = ["zstd", "lz4", "cybersec"]
zstd     = ["dep:zstd"]
lz4      = ["dep:lz4"]
cybersec = []

[profile.release]
opt-level     = 3
lto           = "fat"
codegen-units = 1
panic         = "abort"
strip         = true

[profile.release-dbg]
inherits = "release"
debug    = true
strip    = false
