[package]
name = "hackerfs"
version = "0.1.0"
edition = "2021"

[dependencies]
fuser = "0.15"
sled = "0.34"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
log = "0.4.21"
env_logger = "0.11.3"
libc = "0.2.155"
aes-gcm = "0.10.3"
blake3 = "1.5.3"
rand = "0.8.5"
hex = "0.4.3"
