[package]
name = "hfs"
version = "0.2.0"
edition = "2021"

[dependencies]
fuser = "0.15"
sled = "0.34"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
libc = "0.2"
aes-gcm = "0.10"
blake3 = "1.5"
rand = "0.8"
hex = "0.4"
flate2 = "1.0"
rayon = "1.10"
lru = "0.12"
dashmap = "5.5"
crossbeam = "0.8"
thiserror = "1.0"
anyhow = "1.0"

# Optional compression backends
zstd = { version = "0.13", optional = true }
lz4 = { version = "1.24", optional = true }

[features]
default = ["zstd", "lz4"]
zstd = ["dep:zstd"]
lz4 = ["dep:lz4"]
